--- a/packages/chonky/package.json
+++ b/packages/chonky/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chonky",
-  "version": "2.3.2",
+  "version": "2.3.2-ij.1",
   "description": "A File Browser component for React",
   "license": "MIT",
   "main": "dist/index.js",
@@ -13,23 +13,24 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
-    "size": "size-limit",
-    "analyze": "size-limit --why",
+    "start": "tsup --watch",
+    "build": "tsup",
+    "prepare": "tsup",
     "format": "prettier --config ../../.prettierrc.js --ignore-path ../../.prettierignore . --write --list-different",
     "format-check": "prettier --config ../../.prettierrc.js --ignore-path ../../.prettierignore --check ."
   },
   "peerDependencies": {
-    "react": ">=16"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.16.4",
+    "@mui/material": "^5.15.10",
+    "@mui/styles": "^5.16.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "date-fns": "^3.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -39,7 +40,7 @@
     "useTabs": false,
     "printWidth": 88
   },
-  "module": "dist/chonky.esm.js",
+  "module": "dist/index.mjs",
   "size-limit": [
     {
       "path": "dist/chonky.cjs.production.min.js",
@@ -51,52 +52,53 @@
     }
   ],
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@size-limit/preset-small-lib": "^4.10.1",
-    "@testing-library/react": "^11.2.5",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "babel-loader": "^8.2.2",
-    "husky": "^5.1.3",
-    "prettier": "^2.5.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-is": "^17.0.1",
-    "size-limit": "^4.10.1",
-    "tsdx": "^0.14.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.16.4",
+    "@mui/material": "^5.15.10",
+    "@mui/styles": "^5.16.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/classnames": "^2.3.1",
+    "@types/fuzzy-search": "^2.1.5",
+    "@types/memoizee": "^0.4.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-redux": "^7.1.33",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-window": "^1.8.7",
+    "@types/redux-watch": "^1.1.1",
+    "@types/shortid": "^0.0.32",
+    "date-fns": "^3.6.0",
+    "prettier": "^3.3.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "tsdef": "^0.0.14",
+    "tsup": "^8.1.0",
+    "typescript": "^5.5.3"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.3",
-    "@reduxjs/toolkit": "^1.5.0",
-    "@types/classnames": "^2.2.11",
-    "@types/fuzzy-search": "^2.1.0",
-    "@types/memoizee": "^0.4.5",
-    "@types/react": "^17.0.3",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.2",
-    "@types/redux-watch": "^1.1.0",
-    "@types/shortid": "^0.0.29",
-    "classnames": "^2.2.6",
-    "deepmerge": "^4.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "classnames": "^2.5.1",
+    "deepmerge": "^4.3.0",
     "exact-trie": "^1.0.13",
-    "fast-sort": "^2.2.0",
-    "filesize": "^6.1.0",
+    "fast-sort": "^3.4.0",
+    "filesize": "^10.1.0",
     "fuzzy-search": "^3.2.1",
-    "hotkeys-js": "^3.8.3",
-    "react-dnd": "14.0.5",
-    "react-dnd-html5-backend": "14.1.0",
-    "react-intl": "^5.13.2",
-    "react-jss": "^10.5.1",
-    "react-redux": "^7.2.2",
-    "react-virtualized-auto-sizer": "^1.0.5",
-    "react-window": "^1.8.6",
+    "hotkeys-js": "^3.13.7",
+    "immer": "10.1.1",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
+    "react-intl": "^6.6.2",
+    "react-jss": "^10.10.0",
+    "react-virtualized-auto-sizer": "^1.0.22",
+    "react-window": "^1.8.10",
     "redux-watch": "^1.2.0",
-    "shortid": "^2.2.16",
-    "styled-components": "^5.3.0",
-    "tsdef": "^0.0.14"
+    "shortid": "^2.2.16"
   },
   "homepage": "https://chonky.io/",
   "author": {
