--- a/packages/chonky-icon-fontawesome/package.json
+++ b/packages/chonky-icon-fontawesome/package.json
@@ -52,23 +52,21 @@
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.10.1",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "husky": "^5.1.3",
     "prettier": "^2.5.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "size-limit": "^4.10.1",
     "tsdx": "^0.14.1",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "tslib": "^2.1.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/react-fontawesome": "^0.1.12",
-    "chonky": "^2.3.2"
+    "@fortawesome/react-fontawesome": "^0.1.12"
   },
   "homepage": "https://chonky.io/",
   "author": {
