--- a/packages/chonky/package.json
+++ b/packages/chonky/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chonky",
-  "version": "2.3.5",
+  "version": "2.3.7",
   "description": "A File Browser component for React",
   "license": "MIT",
   "main": "dist/index.js",
@@ -84,11 +84,16 @@
     "@fortawesome/free-brands-svg-icons": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroui/button": "^2.2.10",
+    "@heroui/dropdown": "^2.3.10",
+    "@heroui/system": "^2.4.7",
+    "@heroui/theme": "^2.4.6",
     "classnames": "^2.5.1",
     "deepmerge": "^4.3.0",
     "exact-trie": "^1.0.13",
     "fast-sort": "^3.4.0",
     "filesize": "^10.1.0",
+    "framer-motion": "^12.0.1",
     "fuzzy-search": "^3.2.1",
     "hotkeys-js": "^3.13.7",
     "immer": "10.1.1",
@@ -99,7 +104,8 @@
     "react-virtualized-auto-sizer": "^1.0.22",
     "react-window": "^1.8.10",
     "redux-watch": "^1.2.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "tailwindcss": "^4.0.0"
   },
   "homepage": "https://chonky.io/",
   "author": {
